refactor(api): handle 404 errors
