# api/docs/swagger.yaml
@@ -138,6 +138,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/httputils.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputils.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -212,6 +216,10 @@ paths:
               type: object
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/httputils.ErrorResponse'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/httputils.ErrorResponse'
         "500":
